--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.2.8",
     "@mui/material": "^5.2.8",
     "@mui/styled-engine-sc": "^5.2.8",
+    "@mui/system": "^5.4.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
