--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "eslint-config-zemoso": "^1.0.3",
+    "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -89,6 +91,8 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-storybook": "^0.5.5",
+    "react-hot-loader": "^4.13.0",
+    "sonar-scanner": "^3.1.0",
     "webpack": "^5.65.0"
   }
 }
