--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,9 +2,9 @@ sonar.projectKey=project_key_from_sonarcloud
 sonar.organization=zemoso-int
 sonar.host.url=https://sonarcloud.io
 sonar.sources=src
-sonar.exclusions=**/node_modules/**,**/*.spec.js,**/*.stories.js,**/*.stories.jsx
+sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/*.stories.ts,**/*.stories.tsx
 sonar.tests=src
-sonar.test.inclusions=**/*.test.js,**/*.test.jsx
+sonar.test.inclusions=**/*.test.ts,**/*.test.tsx
 sonar.test.exclusions=**/*.png, **/*.jpg
 sonar.javascript.lcov.reportPaths = coverage/lcov.info
 sonar.sourceEncoding=UTF-8
