--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,17 @@
-sonar.projectKey=project_key_from_sonarcloud
-sonar.organization=zemoso-int
-sonar.host.url=https://sonarcloud.io
-sonar.sources=src
-sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/*.stories.ts,**/*.stories.tsx
+sonar.projectKey=hareesh-cs_Blinkist
+sonar.organization=hareesh-cs
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=demox
+#sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
+sonar.testExecutionReportPaths=test-report.xml
+sonar.test.inclusions=src/**/**/*.test.tsx
 sonar.tests=src
-sonar.test.inclusions=**/*.test.ts,**/*.test.tsx
-sonar.test.exclusions=**/*.png, **/*.jpg
-sonar.javascript.lcov.reportPaths = coverage/lcov.info
-sonar.sourceEncoding=UTF-8
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.exclusions=src/**/**/**/*.stories.tsx
