--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "coverage": "CI=true npm test -- --coverage --testResultsProcessor=jest-sonar-reporter"
   },
   "eslintConfig": {
     "extends": [
@@ -94,6 +95,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-storybook": "^0.5.5",
+    "jest-sonar-reporter": "^2.0.0",
     "react-hot-loader": "^4.13.0",
     "sonar-scanner": "^3.1.0",
     "webpack": "^5.65.0"
