--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.26.0",
     "eslint-config-zemoso": "^1.0.3",
     "json-server": "^0.17.0",
     "react": "^17.0.2",
